# aoc2024

./: .gitignore  LICENSE.txt  README.md  init_day.sh  pyproject.toml
src/aoc2024/: cli.py  solution.py
src/aoc2024/solutions/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py
